<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Wheel_Loader_F_Series_Update</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Software_Update">Software Update</string>
    <string name="Monitor">Monitor</string>
    <string name="MCU">MCU</string>
    <string name="Cluster">Cluster</string>
    <string name="BKCU">BKCU</string>
    <string name="RMCU">RMCU</string>
    <string name="Monitor_STM32_APP">Monitor Firmware and Application</string>
    <string name="Monitor_STM32">Monitor Firmware</string>
    <string name="Monitor_STM32_Factory_Init">Monitor Firmware Factory Init</string>
    <string name="Monitor_Android_OS">Monitor OS</string>
    <string name="Monitor_Android_Boot">Monitor Boot</string>
    <string name="Monitor_Android_Kernel">Monitor Kernel</string>
    <string name="Monitor_Android_App">Monitor App</string>
    <string name="Monitor_ETC">Monitor ETC</string>
    <string name="Monitor_Android_Update">Monitor Update - Update</string>
    <string name="Monitor_Android_Miracast">Monitor Update Smart Terminal</string>
    <string name="Monitor_Android_Remove_Miracast">Monitor Remove SmartTerminal</string>
    <string name="Monitor_Copy_Errors_To_USB">Monitor Copy Errors To USB</string>
    <string name="Monitor_Copy_USB_TO_PDF">Monitor Update HELP(PDF)</string>
    <string name="Monitor_Remove_PDF_File">Monitor Remove HELP(PDF)</string>
    <string name="Monitor_Copy_LANGUAGE">Monitor Update Language(XLS)</string>
    <string name="Monitor_LANGUAGE_Init">Monitor Init	Language(Android)</string>
    <string name="OK">OK</string>
    <string name="Exit">Exit</string>
    <string name="CANCEL">CANCEL</string>
    <string name="Do_you_want_update">Do you want to update?</string>
    <string name="Do_you_want_update_firmware">Do you want to update firmware?</string>
    <string name="Do_you_want_update_app">Do you want to update application?</string>  
    <string name="Do_you_want_update_only_firmware">Do you want to update only firmware?</string>
    <string name="Do_you_want_update_only_app">Do you want to update only application?</string>
    <string name="Do_you_want_update_update">Do you want to update the Update Program?</string>
    <string name="Do_you_want_update_smartterminal">Do you want to update Smart Terminal?</string>
    <string name="Do_you_want_remove_smartterminal">Do you want to remove Smart Terminal?</string>
    <string name="Do_you_want_update_firmware_and_app"><font size="10">Do you want to update firmware and application?</font></string>
    <string name="Do_you_want_update_factory_init">Do you want to update factory init?</string>
    <string name="Program">Program</string>
    <string name="Verify">Verify</string>
    <string name="Update_Finish">Update Finish</string>
    <string name="Update_Fail">Update Fail</string>
    <string name="Program_Fail">Program Fail</string>
    <string name="Verify_Fail">Verify Fail</string>
    <string name="Update_File_Error">Update File Error</string>
    <string name="Correct_ID">Correct ID</string>
    <string name="Incorrect_ID">Incorrect ID</string>
    <string name="Copy_To_USB">Copy to USB</string>
    <string name="Copy_To_USB_Title">Copy Error Report</string>
    <string name="USB_To_PDF">PDF to Android</string>
    <string name="USB_To_PDF_Title">Copy PDF File</string>
</resources>
