<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout_custom_toast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_427x229" >

    <RelativeLayout
        android:id="@+id/RelativeLayout_popup_update_monitor_stm32_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_popup_update_monitor_stm32_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/Monitor_STM32"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <ProgressBar
            android:id="@+id/progressBar_popup_update_monitor_stm32_erase"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/textView_popup_update_monitor_stm32_title" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_popup_update_monitor_stm32_mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout_popup_update_monitor_stm32_top" >

        <TextView
            android:id="@+id/textView_popup_update_monitor_stm32_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/Program"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <ProgressBar
            android:id="@+id/progressBar_popup_update_monitor_stm32_program"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_popup_update_monitor_stm32_program"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />
        
        <TextView
            android:id="@+id/textView_popup_update_monitor_stm32_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/progressBar_popup_update_monitor_stm32_program"
            android:text="@string/Verify"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />
		<ProgressBar	
            android:id="@+id/progressBar_popup_update_monitor_stm32_verify"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_popup_update_monitor_stm32_verify"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_popup_update_monitor_stm32_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout_popup_update_monitor_stm32_mid" >

    </RelativeLayout>

</RelativeLayout>